# semantics-search

./: .gitignore  .pre-commit-config.yaml  README.md  ann.py  app.py  cosine_similarity.py  docker-stack.yml  faq_index.faiss  faq_questions.npy  faqs.py  index.html  new-file.json  pyproject.toml  requirements-dev.txt  requirements.txt  resp.md  tox.ini
backend/: .gitignore  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
backend/api/: __init__.py
backend/api/routes/: __init__.py  chat.py  search.py
backend/application/: __init__.py
backend/application/services/: base.py  chat_service.py  management.py  search_service.py
backend/core/: __init__.py
backend/core/config/: .env  settings.py
backend/core/logging/: logger.py
backend/core/utils/: __init__.py
backend/data_streams/: __init__.py  base.py  test.py
backend/data_streams/faq/: __init__.py  data.json
backend/data_streams/kafka/: data.json
backend/data_streams/ornaz/: __init__.py  data.json
backend/db_connectors/: __init__.py
backend/db_connectors/elasticdb/: connector.py  models.py
backend/domain/: __init__.py
backend/domain/interfaces/: index_store.py  llm.py  management.py  repository.py  search.py
backend/domain/models/: __init__.py  chat.py  index_store.py  management.py  search.py
backend/infrastructure/: __init__.py
backend/infrastructure/data_streams/: __init__.py  base.py
backend/infrastructure/data_streams/kafka/: __init__.py
backend/infrastructure/index_store/: __init__.py  factory.py
backend/infrastructure/llm/: __init__.py  factory.py  openai_provider.py
backend/infrastructure/search/: __init__.py  ann_strategy.py  cosine_strategy.py  euclidean_strategy.py  factory.py
backend/llms/_session_store/: __init__.py  _interface.py  redis.py
backend/llms/gpt/: __init__.py
backend/llms/longchain/: __init__.py  prompt_format.md
backend/llms/ollama_rest_api_based/: __init__.py
backend/logger/: config.json
backend/management/: __init__.py  factory.py
backend/routers/: __init__.py  chat.py  search.py
backend/search/: base.py  cosine_search.py  euclidean_search.py  hybrid_search.py  main.py  test_main.py
backend/static/: chatbot.js  index.html
backend/templates/: search.html
backend/tests/: __init__.py  test_endpoints.py  test_gpt.py  test_session_store.py
backend/utils/: common.py  encoder.py  indexer.py
(+76 files in other folders)
