[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantics-search-chatbot"
version = "0.1.0"
description = "A semantic search chatbot"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # Add your dependencies here
]

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "data_streams",
    "db_connectors",
    "llms",
    "logger",
    "routers",
    "search",
    "utils"
]
py-modules = ["app"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s --strict-markers"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
src_paths = ["."]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]
filename = "**/*.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310
isolated_build = True
"""
